kubernetes/vms/fortigate/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fg-firewall-mgmt
  namespace: vms
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: vms-fg-insecure-transport@kubernetescrd
spec:
  type: ClusterIP
  selector:
    kubevirt.io/vm: fg-firewall
  ports:
    - name: https-mgmt
      port: 443
      targetPort: 443
    - name: ssh-mgmt
      port: 22
      targetPort: 22
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fg-firewall-ingress
  namespace: vms
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-https-redirect@kubernetescrd,default-admin-only-access@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: fortigate.lambertlab.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fg-firewall-mgmt
                port:
                  number: 443
